--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   path_provider: ^2.0.11
   provider: ^6.0.3
   flutter_launcher_icons: ^0.10.0
+  flutter_lints: ^2.0.1
 
 flutter_icons:
   android: "launcher_icon"
@@ -71,14 +72,22 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: Simply
+    - family: Montserrat
       fonts:
-        - asset: fonts/Simply.ttf
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+        - asset: fonts/montserrat/Montserrat-ExtraLight.otf
+          weight: 100
+        - asset: fonts/montserrat/Montserrat-Light.otf
+          weight: 200
+        - asset: fonts/montserrat/Montserrat-Regular.otf
+          weight: 300
+        - asset: fonts/montserrat/Montserrat-Medium.otf
+          weight: 400
+        - asset: fonts/montserrat/Montserrat-SemiBold.otf
+          weight: 500
+        - asset: fonts/montserrat/Montserrat-Bold.otf
+          weight: 600
+        - asset: fonts/montserrat/Montserrat-ExtraBold.otf
+          weight: 700
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
