--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,10 +52,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/animals/
-    - images/states/
-    - images/questionAndCorrect/
-    - images/icons/
+    - assets/images/animals/
+    - assets/images/states/
+    - assets/images/questionAndCorrect/
+    - assets/images/icons/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -72,19 +72,19 @@ flutter:
   fonts:
     - family: Montserrat
       fonts:
-        - asset: fonts/montserrat/Montserrat-ExtraLight.otf
+        - asset: assets/fonts/montserrat/Montserrat-ExtraLight.otf
           weight: 100
-        - asset: fonts/montserrat/Montserrat-Light.otf
+        - asset: assets/fonts/montserrat/Montserrat-Light.otf
           weight: 200
-        - asset: fonts/montserrat/Montserrat-Regular.otf
+        - asset: assets/fonts/montserrat/Montserrat-Regular.otf
           weight: 300
-        - asset: fonts/montserrat/Montserrat-Medium.otf
+        - asset: assets/fonts/montserrat/Montserrat-Medium.otf
           weight: 400
-        - asset: fonts/montserrat/Montserrat-SemiBold.otf
+        - asset: assets/fonts/montserrat/Montserrat-SemiBold.otf
           weight: 500
-        - asset: fonts/montserrat/Montserrat-Bold.otf
+        - asset: assets/fonts/montserrat/Montserrat-Bold.otf
           weight: 600
-        - asset: fonts/montserrat/Montserrat-ExtraBold.otf
+        - asset: assets/fonts/montserrat/Montserrat-ExtraBold.otf
           weight: 700
   #
   # For details regarding fonts from package dependencies,
