--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,8 +53,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/animals/
-    - assets/images/states/
+    - assets/images/categories/
+    - assets/images/categories/animals/
+    - assets/images/categories/states/
     - assets/images/questionAndCorrect/
     - assets/images/icons/
   #   - images/a_dot_ham.jpeg
